--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,18 +58,10 @@
     display: flex;
   }
 
-  .header-btn {
-    display: none;
-  }
-
 }
 
 @media (max-width: 768px) {
 
-
-  .header-container {
-    height: 80px;
-  }
 
   .main-content {
     padding-top: 90px;
